fixed header styling/doesn't distort on smaller screens

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,12 +9,11 @@
     padding-top: 1%;
     padding-right: 5%;
     clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
-    height: 11vh;
   }
   
 
   .background {
     background: #0090D0;
-    height: 15vh;
+    height: 5%;
     width: 100%;
   }
